# imol

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  catalog-info.yaml  pyproject.toml
.github/workflows/: publish.yml  python_lint.yaml  release.yml  tests.yml
examples/: imol_example.ipynb  pymol_example.ipynb
imol/: __init__.py  imol.py
imol/stability_functions/: AMOK.py  CB05.py  HB88.py  __init__.py
pymol/: __init__.py  pymol.py
pymol/stability_functions/: CB05.py
tests/: test_imol.py  test_pymol.py
tests/input_data/: AMOKtest_output.txt  Test_CB05_output.nc  Test_HB88_output.nc  Test_input.txt  Test_output1.nc  Test_output1.txt  Test_output2.txt
