[project]
name = "pymol"
dynamic = ["version"]
description = "Estimate the Monin-Obukhov length from bulk parameters"
license = "MIT"
authors = [{ name = "Knut S. Seim", email = "knss@equinor.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2,<3",
    "scipy",
    "xarray",
    "pandas>=2,<3",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["pymol"]
